external-crates/move/crates/move-compiler/tests/move_2024/verification/spec_only_do_filter_binding2.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
assertion_line: 276
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W09002]: unused variable
  ┌─ tests/move_2024/verification/spec_only_do_filter_binding2.move:8:13
  │
8 │         let x0 = _x.to_int();
  │             ^^ Unused local variable 'x0'. Consider removing or prefixing with an underscore: '_x0'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04023]: invalid method call
  ┌─ tests/move_2024/verification/spec_only_do_filter_binding2.move:8:18
  │
8 │         let x0 = _x.to_int();
  │                  ^^^^^^^^^^^
  │                  │  │
  │                  │  No local 'use fun' alias was found for 'u64.to_int', and no function 'to_int' was found in the defining module 'std::u64'
  │                  Invalid method call. No known method 'to_int' on type 'u64'
